src/test/ui/lifetime-errors/ex2a-push-one-existing-name-early-bound.stderr
error[E0621]: explicit lifetime required in the type of `y`
  --> $DIR/ex2a-push-one-existing-name-early-bound.rs:17:12
   |
13 | fn baz<'a, 'b, T>(x: &mut Vec<&'a T>, y: &T)
   |                                       - consider changing the type of `y` to `&'a T`
...
17 |     x.push(y); //~ ERROR explicit lifetime required
   |            ^ lifetime `'a` required

error: aborting due to previous error

